[package]
name = "blobrust"
version = "0.1.0"
authors = ["daslocom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[lib]
crate-type = ["cdylib"]
